feat: Implement ManageSchedule and SchedulesList components for doctor schedule management
- Added ManageSchedule component for doctors to create, edit, and delete their schedules.
- Integrated scheduleService for CRUD operations on schedules.
- Implemented SchedulesList component to display schedules with appropriate permissions for doctors and admins.
- Enhanced appointmentService to handle appointment creation with proper structure.
- Updated authService and doctorService for better user profile management.
- Introduced user role constants and permission checks for role-based access control.
- Added utility functions for handling user roles and permissions.
- Improved error handling and logging throughout the services.